* 批判分析所见所闻

--- a/docs/book.org
+++ b/docs/book.org
@@ -186,6 +186,8 @@
 + 要持续不断地观察周围发生变化的事情，而不只是你自己在做的事情。
 + 不要因为过度修饰和过于求精而毁损完好的程序。
 + 是否在某个项目中使用这些技术，或者是否把它们放入你的简历，这并不重要。学习的过程将扩展你的思维，使你向着新的可能性和新的做事方式扩展。
++ 所有阅读和研究都需呀时间，而时间已经很短缺。所以你需要预先规划。让自己在空闲的片刻时间里总有东西可读。
++ 批判地思考你读到的和听到的。不要受到供应商或者媒体炒作的影响。
 + tips: 
   - Care About Your Craft.(关注你的技艺。)
   - Think!About Your Work.(思考！你的工作。)
@@ -194,4 +196,5 @@
   - Be a Catalyst for Change. (做变化的催化剂)
   - Remember the Big Picture.(记住大的图景)
   - Invest Regularly in Your Knowledge Portfolio.(定期为你的知识资产投资)
+  - Critically Analyze What You Read and Hear.(批判地分析你读到的和听到的)
 ***** TODO 29.《图解茶经》(2017-02-26)
