* 深度学习的制约

--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
+*** 关于深度学习
++ 目前每天只能写点短小的总结文字。从深度学习出来之后，我就一直有一个设想：人的大脑是一个很复杂的神经系统。按理说，深度学习，其实也是模仿的人的大脑的思考方式。那么正常人为什么不能通过深度学习去开发一个强大的脑力？是什么原因限制了那么多蕴含潜力的大脑一直蛰伏着，或者是埋没了？怎么冲破那些制约因素的限制？
 *** 技术
 + 技术终究是要使用场景。没有使用场景，再高深、再牛逼的技术也是不值一谈。还浪费了时间、精力。
 + 搬家的一点趣事（教训）: 看房子，一定要综合考虑，特别是最主要的要点是需要安静，在这个基础上再去考量空间，价格等等因素。考虑一个地方安静与否，需要想象不同时间下，会有啥变化。多花些时间调研，总比后悔好。
