--- a/docs/book.org
+++ b/docs/book.org
@@ -196,8 +196,19 @@
 + 养成不断地批判对待自己的代码的习惯。寻找任何重新进行组织、以改善其结构和正交性的机会。
 + 要实现某种东西，总有不止一种方式，而且通常有不止一家供应商可以提供第三方产品。
 + 如果某个想法是你唯一的想法，再没有什么比这更危险的事情了。
-+ tips: 
++ * 如果你看到马蹄印，要想到马，而不是斑马* 。
++ 注重实效的程序员，连自己的代码也不信任。（注意这里不是不自信)没有人能编写完美的代码，针对自己的错误进行防卫性的编码。构建代码、对资源确实得到了适当释放进行实际检查。
++ 当每个人都确实要对你不利时，偏执就是一个好主意。 -- Woody Allen
++ 没有什么比常识和坦率更让人感到惊讶。
++ 死程序，不说谎。
++ 如果有一个错误，就说明非常、非常糟糕的事情已经发生了。
++ 不要用断言代替真正的错误处理。断言检查的是决不应该发生的事情。
++ 只要在编程，我们都要管理资源：内存、事务、线程、文件、定时器－－所有数量有限的事物。大多数时候，资源使用遵循一种可预测的模式：分配资源，使用它，然后解除其分配。
++ tips:
++ - Crash Early.(早崩溃。)
   - Care About Your Craft.(关注你的技艺。)
+  - Don't Assume it - Prove It.(不要假定，要证明。)
+  - Learn a Text Manipulation Language.(学习一种文本操纵语言。)
   - Think!About Your Work.(思考！你的工作。)
   - Provide Options, Don't Make Lame Excuses.(提供各种选择，不要找蹩脚的借口。)
   - Don't Live with Broken Windows.(不要容忍破窗户)
@@ -208,5 +219,8 @@
   - DRY - Don't Repeat Yourself.(不要重复你自己)
   - Make It Easy to Reuse.(让复用变得容易)
   - Eliminate Effects Between Unrelated Things.(消除无关事物之间的影响)
-  - 
+  - Write Code That Writes Code.(编写能编写代码的代码。)
+  - You Can't Write Perfect Software.(你不可能写出完美的软件。)
+  - If It Can't Happen, Use Assertions to Ensure That it Won't. (如果它不可能发生, 用断言确保它不会发生。)
+  - Finish What You Start.
 ***** TODO 29.《图解茶经》(2017-02-26)
