* 灵活的代码

--- a/docs/book.org
+++ b/docs/book.org
@@ -204,6 +204,13 @@
 + 如果有一个错误，就说明非常、非常糟糕的事情已经发生了。
 + 不要用断言代替真正的错误处理。断言检查的是决不应该发生的事情。
 + 只要在编程，我们都要管理资源：内存、事务、线程、文件、定时器－－所有数量有限的事物。大多数时候，资源使用遵循一种可预测的模式：分配资源，使用它，然后解除其分配。
++ 保持灵活
+  - 少些代码
+  - 降低耦合
+  - 数据模型(model)和模型的视图(view)分离
+  - 提供一个“聚会地点”，　各模块之间可以在那里匿名和异步地交换数据。
++ 好篱笆促成好邻居。
++ 切断最小组织单位之间的交往能保护每一个人。把代码组织成最小组织单位（模块），并限制它们之间的交互。随后出于折中必须替换某个模块，其他模块仍能继续工作。
 + tips:
 + - Crash Early.(早崩溃。)
   - Care About Your Craft.(关注你的技艺。)
