--- a/docs/book.org
+++ b/docs/book.org
@@ -171,65 +171,90 @@
 ***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
 ** 2017 Year Books
 ***** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
-+ 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
-+ 编程是一种技艺，一种需要用心学习的技艺。
-+ 不应该局限于任何限定的技术，而是应该拥有足够广博的背景和经验基础，以让你能在特定情况下选择好的解决方案。你的背景源自于对计算机科学的基本原理的理解，而你的经验来自广泛的实际项目。
-+ 注重实效的程序员不仅要完成工作，而且要完成得漂亮。
-+ 软件构造应该是工程学科。但是，并不排斥个人的技艺。
-+ 我们, 采集的只是石头，却必须时刻展望未来的大教堂。--采石工人的信条
-+ 不间断的思考，实时地批判你的工作。
-+ 在一个项目的总体结构中，总有个性和技艺的位置。
-+ 注重实效的哲学
-+ 越出直接的问题去思考，总是设法把问题放在更大的语境中，总是设法注意更大的图景。
-+ 对自己做的每件事情负责。
-+ 在所有弱电中，最大的弱点就是害怕暴露弱点。
-+ 一扇破窗户，只要有那么一段时间不修理，就会渐渐给建筑的居民带来一种废弃感。
-+ 要持续不断地观察周围发生变化的事情，而不只是你自己在做的事情。
-+ 不要因为过度修饰和过于求精而毁损完好的程序。
-+ 是否在某个项目中使用这些技术，或者是否把它们放入你的简历，这并不重要。学习的过程将扩展你的思维，使你向着新的可能性和新的做事方式扩展。
-+ 所有阅读和研究都需呀时间，而时间已经很短缺。所以你需要预先规划。让自己在空闲的片刻时间里总有东西可读。
-+ 批判地思考你读到的和听到的。不要受到供应商或者媒体炒作的影响。
-+ 编码
-  - 让你的代码保持解耦
-  - 避免使用全局数据
-  - 避免编写相似的函数
-+ 养成不断地批判对待自己的代码的习惯。寻找任何重新进行组织、以改善其结构和正交性的机会。
-+ 要实现某种东西，总有不止一种方式，而且通常有不止一家供应商可以提供第三方产品。
-+ 如果某个想法是你唯一的想法，再没有什么比这更危险的事情了。
-+ * 如果你看到马蹄印，要想到马，而不是斑马* 。
-+ 注重实效的程序员，连自己的代码也不信任。（注意这里不是不自信)没有人能编写完美的代码，针对自己的错误进行防卫性的编码。构建代码、对资源确实得到了适当释放进行实际检查。
-+ 当每个人都确实要对你不利时，偏执就是一个好主意。 -- Woody Allen
-+ 没有什么比常识和坦率更让人感到惊讶。
-+ 死程序，不说谎。
-+ 如果有一个错误，就说明非常、非常糟糕的事情已经发生了。
-+ 不要用断言代替真正的错误处理。断言检查的是决不应该发生的事情。
-+ 只要在编程，我们都要管理资源：内存、事务、线程、文件、定时器－－所有数量有限的事物。大多数时候，资源使用遵循一种可预测的模式：分配资源，使用它，然后解除其分配。
-+ 保持灵活
-  - 少些代码
-  - 降低耦合
-  - 数据模型(model)和模型的视图(view)分离
-  - 提供一个“聚会地点”，　各模块之间可以在那里匿名和异步地交换数据。
-+ 好篱笆促成好邻居。
-+ 切断最小组织单位之间的交往能保护每一个人。把代码组织成最小组织单位（模块），并限制它们之间的交互。随后出于折中必须替换某个模块，其他模块仍能继续工作。
-+ tips:
-+ - Crash Early.(早崩溃。)
-  - Care About Your Craft.(关注你的技艺。)
-  - Don't Assume it - Prove It.(不要假定，要证明。)
-  - Learn a Text Manipulation Language.(学习一种文本操纵语言。)
-  - Think!About Your Work.(思考！你的工作。)
-  - Provide Options, Don't Make Lame Excuses.(提供各种选择，不要找蹩脚的借口。)
-  - Don't Live with Broken Windows.(不要容忍破窗户)
-  - Be a Catalyst for Change. (做变化的催化剂)
-  - Remember the Big Picture.(记住大的图景)
-  - Invest Regularly in Your Knowledge Portfolio.(定期为你的知识资产投资)
-  - Critically Analyze What You Read and Hear.(批判地分析你读到的和听到的)
-  - DRY - Don't Repeat Yourself.(不要重复你自己)
-  - Make It Easy to Reuse.(让复用变得容易)
-  - Eliminate Effects Between Unrelated Things.(消除无关事物之间的影响)
-  - Write Code That Writes Code.(编写能编写代码的代码。)
-  - You Can't Write Perfect Software.(你不可能写出完美的软件。)
-  - If It Can't Happen, Use Assertions to Ensure That it Won't. (如果它不可能发生, 用断言确保它不会发生。)
-  - Finish What You Start.
+      + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
+      + 编程是一种技艺，一种需要 *用心学习的技艺* 。
+      + 不应该局限于任何限定的技术，而是应该拥有足够广博的背景和经验基础，以让你能在特定情况下选择好的解决方案。你的背景源自于对计算机科学的基本原理的理解，而你的经验来自广泛的实际项目。
+      + 注重实效的程序员不仅要完成工作，而且要完成得漂亮。
+      + 软件构造应该是工程学科。但是，并不排斥个人的技艺。
+      + 我们, 采集的只是石头，却必须时刻展望未来的大教堂。--采石工人的信条
+      + 不间断的思考，实时地批判你的工作。
+      + 在一个项目的总体结构中，总有个性和技艺的位置。
+      + *注重实效* 的哲学
+      + 越出直接的问题去思考，总是设法把问题放在更大的语境中，总是设法注意更大的图景。
+      + 对自己做的每件事情 *负责* 。
+      + 在所有弱电中，最大的弱点就是害怕暴露弱点。
+      + 一扇破窗户，只要有那么一段时间不修理，就会渐渐给建筑的居民带来一种废弃感。
+      + 要持续不断地观察周围发生变化的事情，而不只是你自己在做的事情。
+      + 不要因为过度修饰和过于求精而毁损完好的程序。
+      + 是否在某个项目中使用这些技术，或者是否把它们放入你的简历，这并不重要。学习的过程将扩展你的思维，使你向着新的可能性和新的做事方式扩展。
+      + 所有阅读和研究都需呀时间，而时间已经很短缺。所以你需要预先规划。让自己在空闲的片刻时间里总有东西可读。
+      + 批判地思考你读到的和听到的。不要受到供应商或者媒体炒作的影响。
+      + 编码
+        - 让你的代码保持解耦
+        - 避免使用全局数据
+        - 避免编写相似的函数
+      + 养成不断地 *批判* 对待自己的代码的习惯。寻找任何重新进行组织、以改善其结构和正交性的机会。
+      + 要实现某种东西，总有不止一种方式，而且通常有不止一家供应商可以提供第三方产品。
+      + 如果某个想法是你唯一的想法，再没有什么比这更危险的事情了。
+      + *如果你看到马蹄印，要想到马，而不是斑马* 。
+      + 注重实效的程序员，连自己的代码也不信任。（注意这里不是不自信)没有人能编写完美的代码，针对自己的错误进行防卫性的编码。构建代码、对资源确实得到了适当释放进行实际检查。
+      + 当每个人都确实要对你不利时，偏执就是一个好主意。 -- Woody Allen
+      + 没有什么比常识和坦率更让人感到惊讶。
+      + 死程序，不说谎。
+      + 如果有一个错误，就说明非常、非常糟糕的事情已经发生了。
+      + 不要用断言代替真正的错误处理。断言检查的是决不应该发生的事情。
+      + 只要在编程，我们都要管理资源：内存、事务、线程、文件、定时器－－所有数量有限的事物。大多数时候，资源使用遵循一种可预测的模式：分配资源，使用它，然后解除其分配。
+      + 保持灵活
+        - 少些代码
+        - 降低耦合
+        - 数据模型(model)和模型的视图(view)分离
+        - 提供一个“聚会地点”，　各模块之间可以在那里匿名和异步地交换数据。
+      + 好篱笆促成好邻居。
+      + 切断最小组织单位之间的交往能保护每一个人。把代码组织成 *最小组织单位* （模块），并限制它们之间的交互。随后出于折中必须替换某个模块，其他模块仍能继续工作。
+      + 为并发进行设计。
+      + 不要写渡渡鸟代码。
+      + 为一般情况写程序，把具体情况放在别处。
+      + 动态配置。
+      + 再多的天才也无法胜过对细节的专注。
+      + 注重 *实效的程序员* 几乎每天都要使用：估计算法使用的资源--时间、处理器、内存，and so on.
+      + 需要在选择适当算法时注重实效--最快的算法对于你的工作并非总是最好的。
+      + 每个开发者都应该有 *设计与分析算法的才能* 。
+      + 重写、重做和重新架构代码合起来，称为 *重构* 。重构是意向需要慎重、深思熟虑、小心进行的活动。进行利大于弊的重构：
+        - 不要试图在重构的同时增加新功能。
+        - 在开始重构之前，确保你拥有良好的测试。
+        - 采取短小、深思熟虑的步骤。
+      + tips:
+      + - Crash Early.(早崩溃。)
+        - Care About Your Craft.(关注你的技艺。)
+        - Don't Assume it - Prove It.(不要假定，要证明。)
+        - Learn a Text Manipulation Language.(学习一种文本操纵语言。)
+        - Think!About Your Work.(思考！你的工作。)
+        - Provide Options, Don't Make Lame Excuses.(提供各种选择，不要找蹩脚的借口。)
+        - Don't Live with Broken Windows.(不要容忍破窗户)
+        - Be a Catalyst for Change. (做变化的催化剂)
+        - Remember the Big Picture.(记住大的图景)
+        - Invest Regularly in Your Knowledge Portfolio.(定期为你的知识资产投资)
+        - Critically Analyze What You Read and Hear.(批判地分析你读到的和听到的)
+        - DRY - Don't Repeat Yourself.(不要重复你自己)
+        - Make It Easy to Reuse.(让复用变得容易)
+        - Eliminate Effects Between Unrelated Things.(消除无关事物之间的影响)
+        - Write Code That Writes Code.(编写能编写代码的代码。)
+        - You Can't Write Perfect Software.(你不可能写出完美的软件。)
+        - If It Can't Happen, Use Assertions to Ensure That it Won't. (如果它不可能发生, 用断言确保它不会发生。)
+        - Finish What You Start.
+        - Don't Program by Coincidence.
+        - Use Blackboards to Coordinate Workflow.
+        - Separate Views from Models.
+        - Design Using Services.
+        - Analyze Workflow to Improve Concurrency.
+        - Put Abstractions in Code, Details in Metadata. (将抽象放进代码， 细节放进元数据。)
+        - Configure, Don't Integrate.(要配置，不要集成。)
+        - Estimate the Order Your Algorithms.(估算你的算法的阶。)
+        - Test Your Estimates.
+        - Design to Test.
+        - Test Your Software, or Your Users Will.
+        - Don't Use Wizard Code You Don't Understand.
+        - Refactor Early, Refactor Often.(早重构，常重构。)
 ***** TODO 29.《图解茶经》(2017-02-26)
 **** [[../photos/tea.jpg]]
 **** 饼茶品质好坏的鉴别
