--- a/docs/book.org
+++ b/docs/book.org
@@ -161,6 +161,7 @@
         + *中* 是取得阴阳平衡的一点，是最佳的意思。
         + 过多以物质为中心，是会失去内省的。人的内心的 *平衡* 是不可或缺的。
 
+** 2017 Year Books
 ***** IN_PROGRESS 22. 官子大全 
 ***** IN_PROGRESS [#A] 23. 乌合之众(推荐)
 ***** IN_PROGRESS [#B] 24. 哲学家都做了些什么
@@ -169,7 +170,6 @@
 + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 ***** DONE [#B] 26. <三体>三部曲
 ***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
-** 2017 Year Books
 ***** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
       + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
       + 编程是一种技艺，一种需要 *用心学习的技艺* 。
@@ -224,7 +224,7 @@
         - 在开始重构之前，确保你拥有良好的测试。
         - 采取短小、深思熟虑的步骤。
       + tips:
-      + - Crash Early.(早崩溃。)
+        - Crash Early.(早崩溃。)
         - Care About Your Craft.(关注你的技艺。)
         - Don't Assume it - Prove It.(不要假定，要证明。)
         - Learn a Text Manipulation Language.(学习一种文本操纵语言。)
