* org format update title level

--- a/docs/book.org
+++ b/docs/book.org
@@ -1,6 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 ** 2016 Books Lists
-***** profession books lists
+*** profession books lists
 | name                                               | brief | core ideas                   | time                  | book review                   |
 |----------------------------------------------------+-------+------------------------------+-----------------------+-------------------------------|
 | Hacker And Painter                                 | emacs | freedom                      | 2016-06-05            | emacs is a super power editor |
@@ -8,27 +8,27 @@
 |----------------------------------------------------+-------+------------------------------+-----------------------+-------------------------------|
 | The Pragmatic Programmer:From Journeyman to Master | -     | how to become a master coder | 2017-03-05~2017-03-30 |need read much times    |
 
-***** DONE 1. 提早六小时下班的高效工作术 (2015-10-19)
-***** DONE 2. 效率是整理出来的(2015-10-20)
-***** DONE 3. 秦时明月五万里长城(2015-10-21)
-***** DONE 4. 零压力工作法(2015-10-2
-***** DONE 5. 内心强大的力量(读尼采哲理2015-10-22)
+*** DONE 1. 提早六小时下班的高效工作术 (2015-10-19)
+*** DONE 2. 效率是整理出来的(2015-10-20)
+*** DONE 3. 秦时明月五万里长城(2015-10-21)
+*** DONE 4. 零压力工作法(2015-10-2
+*** DONE 5. 内心强大的力量(读尼采哲理2015-10-22)
 	内心强大很重要. 
-***** DONE 6. 秦时明月六焚书坑儒(2015-10-23)
+*** DONE 6. 秦时明月六焚书坑儒(2015-10-23)
 	读小说, 和看视频是两种体验.视频是经过再创作的过程.有的小说比视频好看, 而有的视频比原著精彩. 雨和彩虹各有各的精彩. 一个是诗, 一个是远方.
-***** DONE 7. 优秀员工的良好工作习惯(2015-10-23)
+*** DONE 7. 优秀员工的良好工作习惯(2015-10-23)
 	认真的习惯
-***** DONE 8. 内心强大的力量(2015-10-24, 看完)
-***** DONE 9. 优秀员工的良好工作习惯(2015-10-24)
-***** DONE 10. 5个图表解决工作中的12大难题(2015-10-24)
+*** DONE 8. 内心强大的力量(2015-10-24, 看完)
+*** DONE 9. 优秀员工的良好工作习惯(2015-10-24)
+*** DONE 10. 5个图表解决工作中的12大难题(2015-10-24)
 	notice: 用五种图-> 
 					流程图, 圆饼图, 树形图,点图,行列图
-***** DONE 11. 高效程序员的45个习惯(敏捷开发修炼之道) (2015-11-05)
+*** DONE 11. 高效程序员的45个习惯(敏捷开发修炼之道) (2015-11-05)
 	不管路走了多远,错了就要重新返回. -- 土耳其谚语
-***** DONE 12. 《黑客与画家》(2016-01-16)
+*** DONE 12. 《黑客与画家》(2016-01-16)
 	-- 对Lisp语言，以及编程语言有着非常独到的见解,是一本像孙子兵法那样的书籍
-***** IN_PROGRESS [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
-***** DONE 14. 《尼采内心的八度定律》 
+*** IN_PROGRESS [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
+*** DONE 14. 《尼采内心的八度定律》 
       +1) 一切从了解自己开始， 找到自己的价值；
       +2) 爱自己， 新鲜，充实自己；
       +3) 坚持自己的梦想
@@ -37,13 +37,13 @@
       +6) 坦然面对迷惑，坚持自己的判断；
       +7) 每天克制自己的一件小事，自制； 
       +8) 每天进步一点点。 
-***** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
-***** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 
+*** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
+*** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 
     CLOSED: [2016-06-16 Thu 15:54]
-***** IN_PROGRESS [#A] 17. C程序设计（第4版）
-***** DONE [#A] 18. python绝技:运用python成为顶级黑客
-***** IN_PROGRESS [#B] 19. 玄玄棋经
-***** 20. 遥远的救世主 
+*** IN_PROGRESS [#A] 17. C程序设计（第4版）
+*** DONE [#A] 18. python绝技:运用python成为顶级黑客
+*** IN_PROGRESS [#B] 19. 玄玄棋经
+*** 20. 遥远的救世主 
         + 文化属性
         + 透视社会依次有三个层次 *技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移* 。
 
@@ -136,7 +136,7 @@
         + 外国不是我们家的厨房，不是我想进就进。有钱的男人也不是菜市场里的鸡蛋，不是我想抓一个就抓一个。
         + 马太效应： *你有，给你更多；你没有，把你原来的都拿走*
         + 当人一旦从危险里跳出来，他就不再去关注这个事物的危险了，他的目光就会全部落在这个事物的利益人上，这就是人。
-***** 21. 中的精神 
+*** 21. 中的精神 
         + 棋无止境，艺无止境，学无止境，各行各业追求的精神都是相通的，达到这样一个境界的人， *专注修为* ，一定会有所成就。
         + 对于自传或回忆录的作者来说，首先必须面对的，是诗与真的旋蒸，自我与世界的互动，还有遗忘与创造之间的平衡。
         + 反复争棋的最后目的，是从中领悟建立圆满调和的道。
@@ -162,15 +162,15 @@
         + 过多以物质为中心，是会失去内省的。人的内心的 *平衡* 是不可或缺的。
 
 ** 2017 Year Books
-***** IN_PROGRESS 22. 官子大全 
-***** IN_PROGRESS [#A] 23. 乌合之众(推荐)
-***** IN_PROGRESS [#B] 24. 哲学家都做了些什么
-***** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
-+ 有些事必须先做，而且要按正确的次序去做。
-+ 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
-***** DONE [#B] 26. <三体>三部曲
-***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
-***** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
+*** IN_PROGRESS 22. 官子大全 
+*** IN_PROGRESS [#A] 23. 乌合之众(推荐)
+*** IN_PROGRESS [#B] 24. 哲学家都做了些什么
+*** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
+有些事必须先做，而且要按正确的次序去做。
+复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
+*** DONE [#B] 26. <三体>三部曲
+*** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
+*** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
       + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
       + 编程是一种技艺，一种需要 *用心学习的技艺* 。
       + 不应该局限于任何限定的技术，而是应该拥有足够广博的背景和经验基础，以让你能在特定情况下选择好的解决方案。你的背景源自于对计算机科学的基本原理的理解，而你的经验来自广泛的实际项目。
@@ -255,7 +255,7 @@
         - Test Your Software, or Your Users Will.
         - Don't Use Wizard Code You Don't Understand.
         - Refactor Early, Refactor Often.(早重构，常重构。)
-***** TODO 29.《图解茶经》(2017-02-26)
+*** TODO 29.《图解茶经》(2017-02-26)
 **** [[../photos/tea.jpg]]
 **** 饼茶品质好坏的鉴别
      + 饼茶外表：茶饼出膏，　外表光滑。
