* 失控，人工智能

--- a/docs/book.org
+++ b/docs/book.org
@@ -166,8 +166,19 @@
 *** IN_PROGRESS [#A] 23. 乌合之众(推荐)
 *** IN_PROGRESS [#B] 24. 哲学家都做了些什么
 *** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
-有些事必须先做，而且要按正确的次序去做。
-复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
+**** 自我能动
+     + 有机体既是它自己的因也是它自己的果，既是它自己固有的秩序和组织的因，也是其固有秩序和组织的果。
+     + 每一个自我都是一个同义反复：自明、自指、以自己为中心并且自己创造自己。
+     + 一个系统，就是任何一种能够自说自话的东西。
+     + 自动控制三个阶段
+       - 由蒸汽机所引发的能量控制的第一阶段
+       - 对物质的精确控制是第二阶段
+       - 对信息本身的控制是第三阶段
+     + 21 世纪的核心事件，是对信息的颠覆。
+     + 自动化的历史，就是一条从人类控制到自动控制的单向通道。其结果就是从人类的自我到第二类自我的不可逆转的转移。而第二类自我是在我们控制之外的，是失控的。
+     + 具有自我适应能力、像自己的目标进化、不受人类监管自行成长的机器，将会是下一个巨大的技术进步。要想获得有智能的控制，唯一的办法就是给机器自由。
+     + 有些事必须先做，而且要按正确的次序去做。
+     + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 *** DONE [#B] 26. <三体>三部曲
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
 *** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
