--- a/docs/book.org
+++ b/docs/book.org
@@ -33,14 +33,14 @@
 	  + 对Lisp语言，以及编程语言有着非常独到的见解,是一本像孙子兵法那样的书籍
 *** IN_PROGRESS [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
 *** DONE 14. 《尼采内心的八度定律》 
-      1) 一切从了解自己开始， 找到自己的价值；
-      2) 爱自己， 新鲜，充实自己；
-      3) 坚持自己的梦想
-      4) 承认自己的局限，不断进步；
-      5) 历练磨难，凝聚力量；
-      6) 坦然面对迷惑，坚持自己的判断；
-      7) 每天克制自己的一件小事，自制； 
-      8) 每天进步一点点。 
+      + 一切从了解自己开始， 找到自己的价值；
+      + 爱自己， 新鲜，充实自己；
+      + 坚持自己的梦想
+      + 承认自己的局限，不断进步；
+      + 历练磨难，凝聚力量；
+      + 坦然面对迷惑，坚持自己的判断；
+      + 每天克制自己的一件小事，自制； 
+      + 每天进步一点点。 
 *** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
 *** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 
     CLOSED: [2016-06-16 Thu 15:54]
