--- a/docs/book.org
+++ b/docs/book.org
@@ -95,12 +95,9 @@
          - 都是痴人说梦。
           
         + 所谓真经，就是能够打到寂空涅槃的究竟法门，可悟不可修。修为成佛，在求。悟为明性，在知。修行以行制性，悟道以性施行，觉者由心生律，修者以律制心。不落恶果者有信无证，住因住果，住念住心，如是生灭。不昧因果者无住而住，无欲无不欲，无戒无不戒, 如是涅槃。
-
         + 佛乃觉性，非人，人人都有觉性不等于觉性就是人。人相可坏，觉性无生无灭，即觉即显,即障即尘弊，无障不显，了障涅槃。觉行圆满之佛乃佛教人像之佛，圆满即止，既非无量。若佛有量，即非阿弥陀佛。佛法无量即觉行无量，无圆无不圆，无满无不满，亦无是名究竟圆满。佛教以次第而分，从精深处说是得道天成的道法，道法如来不可思议，即非文化。从浅义处说是导人向善的教义，善恶本有人相、我相、众生相，即是文化。从众生处说是以贪治贪、以幻制幻的善巧，虽不灭败坏下流，却无碍抚慰灵魂的慈悲。
-
         + 坐，请坐，请上座。茶，上茶，上好茶。
         + 投石击水，不起浪花也泛涟漪，妙在以扶贫而命题。当有识之士骂你比强盗还坏的时候，责骂者，责即为诊，诊而不医，无异于断为绝症，非仁人志士所为，也背不起这更大的骂名。故而，责必论道。
-
         + 传统观念的死结就在一个 *靠* 字上，在家靠父母，出门靠朋友，靠上帝、靠菩萨、靠皇恩。。。。。。总之靠什么都行，就是别靠自己。这是一个沉积了几千年的文化属性的问题，非几次新文化运动就能开悟。
         + *大爱不爱*
         + 弱势得救之道，也有也没有。没有竞争的社会就没有活力，而竞争必然会产生贫富、等级，此乃天道，乃社会进步的必然代价。无弱，强焉在？一个 *强*　字，　弱已经在其中了。故而，佛度心苦，修的是一个平常心。
@@ -242,8 +239,19 @@
       + 倾向于把需求、设计、以及实现视为同一个过程--交付高质量的系统--的不同方面。要设法采用无缝的方法：规范和实现不过是同一个过程--设法捕捉和编撰需求--的不同方面。
       + 把技术和方法放进开发实践和能力的语境中。
       + 批判地看待方法学，并从各种方法学中提取精华，融合成每个月都在变得更好的一套工作习惯。不断努力提炼和改善你的开发过程。绝不要把方法学的呆板限制当做你的世界的边界。
+      + 测试什么
+        - 单元测试
+        - 集成测试
+        - 验证和校验
+        - 资源耗尽、错误及恢复
+        - 性能测试
+        - 可用性测试
+        - 等等
+      + 
       + tips:
         - Crash Early.(早崩溃。)
+        - Test early. Test Often. Test Automatically.
+        - Code Ain't Done 'Til All the Tests Run.(要到通过全部测试，编码才算完成。)
         - Don't Be a Slave to Formal Method.
         - Expensive Tools Do Not Produce Better Designs.
         - Organize Around Functionality, Not Job Functions.
