--- a/docs/book.org
+++ b/docs/book.org
@@ -174,7 +174,8 @@
      + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 *** DONE [#B] 26. <三体>三部曲
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
-*** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
+*** DONE 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
+    CLOSED: [2017-03-11 Sat 22:12]
       + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
       + 编程是一种技艺，一种需要 *用心学习的技艺* 。
       + 不应该局限于任何限定的技术，而是应该拥有足够广博的背景和经验基础，以让你能在特定情况下选择好的解决方案。你的背景源自于对计算机科学的基本原理的理解，而你的经验来自广泛的实际项目。
