* end time of The Pragmatic Programmer

--- a/docs/book.org
+++ b/docs/book.org
@@ -174,7 +174,7 @@
      + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 *** DONE [#B] 26. <三体>三部曲
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
-*** DONE 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
+*** DONE 28.《程序员修炼之道－－从小工到专家》(2017-02-26~2017-03-11)
     CLOSED: [2017-03-11 Sat 22:12]
       + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
       + 编程是一种技艺，一种需要 *用心学习的技艺* 。
