--- a/docs/book.org
+++ b/docs/book.org
@@ -157,6 +157,9 @@
 ** 2017 Year Books
 *** IN_PROGRESS 22. 官子大全 
 *** IN_PROGRESS [#A] 23. 乌合之众(推荐)
+    + 不严重地依赖历史，根本无法谈论群体行为。
+    + 在决定人们的历史地位上起着更大作用的，不是他们的“真实”面目，而是后人对他们的认识和感受。
+    + 区分错误思想和创造性思想的标准，在社会思想的领域和其它领域一样，当然就是看那些能够站住脚的、大体（但不肯定）正确的思想占了多大比例。
 *** IN_PROGRESS [#B] 24. 哲学家都做了些什么
 *** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
 **** 自我能动
@@ -172,8 +175,8 @@
      + 具有自我适应能力、像自己的目标进化、不受人类监管自行成长的机器，将会是下一个巨大的技术进步。要想获得有智能的控制，唯一的办法就是给机器自由。
      + 有些事必须先做，而且要按正确的次序去做。
      + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
-*** DONE [#B] 26. <三体>三部曲
-*** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
+*** DONE [#B] 26. <三体>三部
+*** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22-)
 *** DONE 28.《程序员修炼之道－－从小工到专家》(2017-02-26~2017-03-11)
     CLOSED: [2017-03-11 Sat 22:12]
       + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
