* 周末且读书吧

--- a/docs/book.org
+++ b/docs/book.org
@@ -175,6 +175,14 @@
      + 具有自我适应能力、像自己的目标进化、不受人类监管自行成长的机器，将会是下一个巨大的技术进步。要想获得有智能的控制，唯一的办法就是给机器自由。
      + 有些事必须先做，而且要按正确的次序去做。
      + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
+**** 密封的瓶装生命
+     + 一天就可以摧毁的东西，要想建成它，可能会需要几年甚至几个世纪的时间。
+     + 复杂性的开端根植于混沌之中。不过，如果复杂系统能够在一段时间的互相迁就之后获得共同的 *平衡* ，那么之后就再没有什么能够让它脱离轨道了。(是不是和习惯一样？一旦养成了自己固定的生活习惯，思维习惯，就会潜意识地贯彻下去。)
+     + “封闭”意味着与流动隔绝。一个真正的封闭系统，是不会参与外部元素流动的; 换句话，它所有的循环都是自治的。
+     + “系统”意味着相互 *连通* 。系统中的事物是相互纠结的，直接或者间接地连接到一个共同的命运。
+     + *“存活”意味着惊喜* 。
+     + 静态才是生态球的常态。
+     + 生态球按比例放大后仍很完好。生态球越大，达到稳定所需时间就越长，破坏它也就越困难。只要处于正常状态，一个活系统的集体代谢过程就会扎下根，然后一直持续下去。
 *** DONE [#B] 26. <三体>三部
     CLOSED: [2017-03-12 Sun 08:33]
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22-)
@@ -314,7 +322,7 @@
         - Gently Exceed Your Users'Expectations.(温和地超出用户的期望)
         - Sign Your Work.
 
-*** TODO 29.《图解茶经》(2017-02-26)
+*** IN_PROGRESS 29.《图解茶经》(2017-02-26)
 **** [[../photos/tea.jpg]]
 **** 饼茶品质好坏的鉴别
      + 饼茶外表：茶饼出膏，　外表光滑。
