--- a/readme.org
+++ b/readme.org
@@ -12,6 +12,7 @@
 + 目前为止，Emacs 里面使用最频繁的是的　Magit 和 Org-mode 这两个神器。
 *** 读书笔记的好处
 + 将读书过程中的要点做个笔记，会加深对书中知识的理解，同时方便侧重点的温故知新。所以今后还是多做读书笔记吧。多少年之后，说不定还会回来看，或者别人也可以看到呢。
++ 读书的一个很贴切的好处就是: 安定自己的内心。调整自己的生活节奏。
 *** 关于深度学习
 + 目前每天只能写点短小的总结文字。从深度学习出来之后，我就一直有一个设想：人的大脑是一个很复杂的神经系统。按理说，深度学习，其实也是模仿的人的大脑的思考方式。那么正常人为什么不能通过深度学习去开发一个强大的脑力？是什么原因限制了那么多蕴含潜力的大脑一直蛰伏着，或者是埋没了？怎么冲破那些制约因素的限制？
 *** 技术
