--- a/docs/book.org
+++ b/docs/book.org
@@ -195,16 +195,16 @@
       + 软件构造应该是工程学科。但是，并不排斥个人的技艺。
       + 我们, 采集的只是石头，却必须时刻展望未来的大教堂。--采石工人的信条
       + 不间断的思考，实时地批判你的工作。
-      + 在一个项目的总体结构中，总有个性和技艺的位置。
+      + 在一个项目的总体结构中，总有 *个性* 和 *技艺* 的位置。
       + *注重实效* 的哲学
-      + 越出直接的问题去思考，总是设法把问题放在更大的语境中，总是设法注意更大的图景。
+      + 越出直接的问题去思考，总是设法把问题放在更大的语境中，总是 *设法注意更大的图景* 。
       + 对自己做的每件事情 *负责* 。
-      + 在所有弱电中，最大的弱点就是害怕暴露弱点。
+      + 在所有弱电中， *最大的弱点就是害怕暴露弱点* 。
       + 一扇破窗户，只要有那么一段时间不修理，就会渐渐给建筑的居民带来一种废弃感。
-      + 要持续不断地观察周围发生变化的事情，而不只是你自己在做的事情。
+      + *要持续不断地观察周围发生变化的事情* ，而不只是你自己在做的事情。
       + 不要因为过度修饰和过于求精而毁损完好的程序。
-      + 是否在某个项目中使用这些技术，或者是否把它们放入你的简历，这并不重要。学习的过程将扩展你的思维，使你向着新的可能性和新的做事方式扩展。
-      + 所有阅读和研究都需呀时间，而时间已经很短缺。所以你需要预先规划。让自己在空闲的片刻时间里总有东西可读。
+      + 是否在某个项目中使用这些技术，或者是否把它们放入你的简历，这并不重要。 *学习的过程将扩展你的思维，使你向着新的可能性和新的做事方式扩展* 。
+      + 所有阅读和研究都需要时间，而时间已经很短缺。所以你需要预先规划。让自己在空闲的片刻时间里总有东西可读。
       + 批判地思考你读到的和听到的。不要受到供应商或者媒体炒作的影响。
       + 编码
         - 让你的代码保持解耦
