* 生命经营的事业

--- a/docs/book.org
+++ b/docs/book.org
@@ -183,6 +183,9 @@
      + *“存活”意味着惊喜* 。
      + 静态才是生态球的常态。
      + 生态球按比例放大后仍很完好。生态球越大，达到稳定所需时间就越长，破坏它也就越困难。只要处于正常状态，一个活系统的集体代谢过程就会扎下根，然后一直持续下去。
+**** 生态技术玻璃球
+     + 生命经营的事业就是改造环境使其有益于生命。如果你能把生命聚拢成为一个群落，给它们充分的自由制造自己茁壮成长所需的条件，这个生物集合体就能一直生存下去，也没有必要知道它是怎样运转的。
+     + 对于任何一个复杂、危险的项目来说，最理想的团队人数是８个人。超过８个人，会造成决策缓慢和耽搁；而少于８个人，突发事件或者疏忽大意就会变成严重的阻碍。
 *** DONE [#B] 26. <三体>三部
     CLOSED: [2017-03-12 Sun 08:33]
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22-)
