* 合成生态系统

--- a/docs/book.org
+++ b/docs/book.org
@@ -186,6 +186,10 @@
 **** 生态技术玻璃球
      + 生命经营的事业就是改造环境使其有益于生命。如果你能把生命聚拢成为一个群落，给它们充分的自由制造自己茁壮成长所需的条件，这个生物集合体就能一直生存下去，也没有必要知道它是怎样运转的。
      + 对于任何一个复杂、危险的项目来说，最理想的团队人数是８个人。超过８个人，会造成决策缓慢和耽搁；而少于８个人，突发事件或者疏忽大意就会变成严重的阻碍。
+     + 细节是至关重要的东西。
+     + 生命的任何领域都是由数不清的独立的回路编织而成的。
+****  合成生态系统
+     + 一旦你改变了生态系统，　并找到适合播种的的种子，以及必不可少的气候窗口，改变就开始了，而且这是不可逆转的。这个合成的生态系统持续运转下去并不需要人的存在，它不受干扰仍会保持下去。
 *** DONE [#B] 26. <三体>三部
     CLOSED: [2017-03-12 Sun 08:33]
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22-)
