--- a/docs/book.org
+++ b/docs/book.org
@@ -190,6 +190,15 @@
      + 生命的任何领域都是由数不清的独立的回路编织而成的。
 ****  合成生态系统
      + 一旦你改变了生态系统，　并找到适合播种的的种子，以及必不可少的气候窗口，改变就开始了，而且这是不可逆转的。这个合成的生态系统持续运转下去并不需要人的存在，它不受干扰仍会保持下去。
+     + 创造生物圈：
+       - 微生物做绝大部分的工作
+       - 土壤是有机体, 它是活的。它会呼吸。
+       - 创造【冗余】的食物网络
+       - 逐步地增加多样性
+       - 如果不能提供一种物理功能，就需要模拟一个类似的功能
+       - 大气会传达整个系统的状态
+       - 聆听系统，看看它要去哪里
+     + 所有的封闭系统都是会被打开的，至少会出现泄露。(也就是: 不存在绝对封闭系统)
 *** DONE [#B] 26. <三体>三部
     CLOSED: [2017-03-12 Sun 08:33]
 *** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22-)
