--- a/docs/book.org
+++ b/docs/book.org
@@ -160,6 +160,26 @@
     + 不严重地依赖历史，根本无法谈论群体行为。
     + 在决定人们的历史地位上起着更大作用的，不是他们的“真实”面目，而是后人对他们的认识和感受。
     + 区分错误思想和创造性思想的标准，在社会思想的领域和其它领域一样，当然就是看那些能够站住脚的、大体（但不肯定）正确的思想占了多大比例。
+    + 遗传赋予每个种族中的每一个人以某些共同特征，这些特征加在一起，便狗成了这个种族的气质。
+    + 在各民族的生活中，有组织的群体历来起着重要的作用。
+    + 社会组织就像一切生命有机体一样复杂，我们还不具备强迫它们在突然之间发生深刻变革的智力。大自然有时采取一些激烈的手段，却从来不是以我们的方式。这说明对一个民族有致命危险的，莫过于它热衷于重大的变革。
+    + 研究社会现象，与研究产生这些现象的名族是分不开的。
+    + 有时不真实的东西比真实的东西包含着更多的道理。
+    + 研究社会现象的哲学家应当时刻牢记，这些现象除了有理论价值外，还有实践价值，只有后一种价值与文明的进化有关，只有它才是重要的。
+    + 社会事实如此复杂，根本不可能全盘掌握活遇见到它们的相互影响带来的后果。此外，在可见的事实背后，有时似乎还隐藏着成百上千种看不见的原因。可见的社会现象可能是某种巨大的无意识机制的结果，而这一机制通常超出了我们的分析范围。
+    + 通过文明洗心革面的唯一重要的变化，是影响到思想、观念和信仰的变化。令人难忘的历史事件，不过是人类思想不露痕迹的变化所造成的可见后果而已。
+    + 人类思想转型的两个基本因素:
+      - 宗教、政治和社会信仰的毁灭，而我们文明的所有要素，都是根植于这些信仰之中。
+      - 其次是现代科学和工业的各种发现，创造了一种新的生存和思想条件。
+    + 群体不善推理，却急于采取行动。
+    + 历史告诉我们: 当文明赖以建立的道德因素失去威力时，它的最终解体总是由无意识的野蛮群体完成的，他们被不无道理地称为野蛮人。
+    + 有着复杂的典章制度、从本能状态进入能够未雨绸缪的理性状态的文明，属于文化的高级阶段。
+    + 当文明的结构摇摇欲坠时，使它颠覆的总是群众。只有在这个时刻，他们的主要使命才是清晰可辨的，此时， *人多势众* 的原则似乎成了唯一的历史法则。
+    + 从事实的角度看，世上的一切伟人，一切宗教和帝国的建立者，一切信仰的使徒和杰出政治家，甚至再说得平庸一点，一伙人里的小头目，都是不自觉的心理学家，他们对于群体性格有着出自本能但往往十分可靠的了解。
+    + 只有对 *群体心理* 有一定的认识，才能理解法律和制度对他们的作用是多么微不足道，才能理解除了别人强加于他们的意见，他们是多么没有能力坚持己见。要想领导他们，不能建立在纯粹的平等学说上的原则，而是要去寻找那些能让他们动心的事情、能够诱惑他们的东西。
+    + 实际上，在群众眼里，也许最不公平的才是最好的。
+    + 群体的禀性，构成了历史的真正主脉。
+    + 破译人们的行为动机，就像确定某种矿物或者植物的属性一样有趣。
 *** IN_PROGRESS [#B] 24. 哲学家都做了些什么
 *** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
 **** 自我能动
