--- a/docs/book.org
+++ b/docs/book.org
@@ -41,119 +41,14 @@
       + 坦然面对迷惑，坚持自己的判断；
       + 每天克制自己的一件小事，自制； 
       + 每天进步一点点。 
-*** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
+*** DONE 15.《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
 *** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 
     CLOSED: [2016-06-16 Thu 15:54]
 *** IN_PROGRESS [#A] 17. C程序设计（第4版）
-*** DONE [#A] 18. python绝技:运用python成为顶级黑客
-*** IN_PROGRESS [#B] 19. 玄玄棋经
-*** 20. 遥远的救世主 
-        + 文化属性
-        + 透视社会依次有三个层次 *技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移* 。
-
-        + 强势文化就是遵循事物规律的文化，弱势文化就是依赖强者的道德期望破格获取的文化，就是期望救世主的文化。强势文化在武学上被称为“秘籍”, 而弱势文化由于易学、易懂、易用，成了流行品种。
-
-        + 比如说文化产业，文学、影视是扒拉灵魂的艺术，如果文学、影视的创作能破解更高思维空间的文化密码，那么它的功效就是启迪人的觉悟、震撼人的灵魂，这就是众生所需，就是功德、市场、名利，精神拯救的暴利与毒品麻醉的暴利完全等值，而且不必像贩毒那样耍花招，没有心理成本和法律风险。 
-
-        + 没有主，主义、主意从哪里来？主无处不在，简单地说， *支配人的价值取舍行为的那个东西就是主，就是文化属性* 。
-        + 文明对于不能以人字来界定的人无能为力。
-        + 死马当做活马医，再糟，死马还能再死一回吗？
-
-        + 股票的暴利并不产生与生产经营，而是产生与股票市场本身的投机性。它的运作动力是：把你口袋里的钱装到我的口袋里去。它的规则是：把大多数羊的肉填到极少数狼的嘴里。
-        + 法律机器的运作不以口供为条件。法律对程序和内容要求极限的严谨。
-
-        + 强盗的逻辑，直接获取，冒险，刺激。
-        + 强盗的本质是破格获取，破格获取和直接获取是两个不同的概念。你们没有自信与强者在同一个规则下公平竞争，这只能说明你是弱者，因为弱者文化所追求的最高价值就是破格获取。所以，强盗的逻辑从本质上讲是最懦弱的生存哲学。
-
-        + 拯救灵魂是《圣经》的买卖。
-        + 《圣经》的理由是：因信着得救了，上天堂；因不信有罪了，下地狱。用这种哄孩子的、吓汉子的方法让人去信，虽有利于基督教的实践，却也迎合了人的怕死的一面、贪婪的一面。这样的因果关系已经不给人以自觉、自省的机会，人连追求高尚的机会都没有，又何以高尚呢？
-
-        + 神是什么？神是根据人的需要造出来的。（容我仿一下：鬼是什么？鬼是根据人的恐惧造出来的。）
-
-        + 《圣经》神学是关于人类精神的学说，是关于人的灵魂净化、升华，人的行为高尚、正典的学说。一味地攻击或捍卫神的真实性与否，都是愚昧的表现。前者没有理解基督教的历史价值和社会价值，后者没有理解基督教的真正境界。
-        + 神是什么？  *神即道，道法自然，如来*  。
-        + *你不知道你，所以你是你，如果你知道了你，你就不是你了。*
-        + 这世上原本就没什么神话，所谓的神话不过是常人的思维所不易理解的平常事。
-        + 无论做什么，市场都不是一块无限大的蛋糕。神话的实质就是强力作用的杀富济贫。这就可能产生两个问题，一是杀富是不是破坏性开采市场资源？二是让井底的人扒着井沿看了一眼再掉下去是不是让他患上精神绝症。
-        + 佛家常说“证到”这个词，却从来不告诉你“证到”后面是什么，因为欲说欲解都不能，因为条件的条件的条件，因为因果的因果的因果，所以就有了如人饮水冷暖自知。
-        + 这就是圆融世故，不显山不露水，各得其所。可品性这东西，今天缺个角、明天裂道缝，也就离塌陷不远了。
-        + 社会对公司的好感也是商业好处的一部分。这不是道德境界问题，是市场生存的法则问题。这种好感不仅仅是我们强行摊派价值观，也不仅仅是腐蚀我们自身的竞争力，更说明我们不是靠产品征服市场而是靠作秀混迹市场，这种违背商业属性的人文评价最终将葬送这个公司。
-        + 生存法则很简单，就是忍人所不能人，能人所不能。忍是一条线，能是一条线，两者的间距就是生存机会。如果我们忍人所不忍，能人所不能，咱们就比别人多了一些生存机会。市场的生存竞争非常残酷，胜负往往就在毫厘之间, *两败俱伤你比他多一口气，你就是赢家* 。（暗合围棋屠龙对杀）
-        + 扬长避短，拾遗补缺，学会夹缝里面求生存。
-        + 公司必须以不断开拓市场和完善服务来抵御市场风险。
-        + 翻开历史看看，你从哪一行哪一页能找到救世主救世的记录。没有，从来就没有，从来都是救人的被救了，被救的救了人。如果一定要讲救世主的话，那么符合和代表客观规律的文化就是救世主。
-        + 扶贫的本质在一个扶字，如果你压根就没有打算自己站起来，老天爷来了都没用。
-        + 法无定法，存在决定意识。
-        + 《悟》
-         - 悟道休言天命，
-         - 修行勿取真经。
-         - 一悲一喜一枯荣，
-         - 哪个前生注定？
-         - 袈裟本无清净，
-         - 红尘不染性空。
-         - 幽幽古刹千年钟，
-         - 都是痴人说梦。
-          
-        + 所谓真经，就是能够打到寂空涅槃的究竟法门，可悟不可修。修为成佛，在求。悟为明性，在知。修行以行制性，悟道以性施行，觉者由心生律，修者以律制心。不落恶果者有信无证，住因住果，住念住心，如是生灭。不昧因果者无住而住，无欲无不欲，无戒无不戒, 如是涅槃。
-        + 佛乃觉性，非人，人人都有觉性不等于觉性就是人。人相可坏，觉性无生无灭，即觉即显,即障即尘弊，无障不显，了障涅槃。觉行圆满之佛乃佛教人像之佛，圆满即止，既非无量。若佛有量，即非阿弥陀佛。佛法无量即觉行无量，无圆无不圆，无满无不满，亦无是名究竟圆满。佛教以次第而分，从精深处说是得道天成的道法，道法如来不可思议，即非文化。从浅义处说是导人向善的教义，善恶本有人相、我相、众生相，即是文化。从众生处说是以贪治贪、以幻制幻的善巧，虽不灭败坏下流，却无碍抚慰灵魂的慈悲。
-        + 坐，请坐，请上座。茶，上茶，上好茶。
-        + 投石击水，不起浪花也泛涟漪，妙在以扶贫而命题。当有识之士骂你比强盗还坏的时候，责骂者，责即为诊，诊而不医，无异于断为绝症，非仁人志士所为，也背不起这更大的骂名。故而，责必论道。
-        + 传统观念的死结就在一个 *靠* 字上，在家靠父母，出门靠朋友，靠上帝、靠菩萨、靠皇恩。。。。。。总之靠什么都行，就是别靠自己。这是一个沉积了几千年的文化属性的问题，非几次新文化运动就能开悟。
-        + *大爱不爱*
-        + 弱势得救之道，也有也没有。没有竞争的社会就没有活力，而竞争必然会产生贫富、等级，此乃天道，乃社会进步的必然代价。无弱，强焉在？一个 *强*　字，　弱已经在其中了。故而，佛度心苦，修的是一个平常心。
-        + *释、道、儒* 是中国传统文化的三大体系。传统文化毕竟是以皇恩浩荡为先决条件的文化，讲的都是 *皆空、无为、中庸* 的理，以抑制个性而求生求解。
-        + 没有地狱，天堂焉在？总得有人在地狱呆着，咱们就算上一个，不然天堂就没有着落了。
-        + 天下之道论到极致，百姓的柴米油盐。人生冷暖论到极致，男人女人的一个 *情* 字。
-        + 佛说 *看山是山，看水是水* ，我只是依佛法如实观照，看摩登女郎是摩登女郎，看红颜知己是红颜知己。
-        + 栏内是净，栏外是土，靠着栏杆就能抽烟。
-        + 有人、有枪、有地盘，还愁没有番号吗？
-        + *骆驼穿针* 的天堂(？没理解)
-        + 你信神吗？ *了妄唯真* 即是神（了妄唯真?）了妄唯真,那神和人是什么关系？　不一不异
-        + 旅游就是意图，开阔眼界、增长见识就是意图。
-        + 想到了就做，该拿的拿该放的放，自性作为不昧因果。
-        + 从现象参到制度、参到文化，因为任何一种命运，归根到底都是那种文化的产物。
-        + 衡量一种文化属性不是看它沉淀的时间长短，而是看它与客观规律的距离远近。五千年的文化是光辉、是灿烂，这个没有问题，但是，传统和习俗得过过客观规律的筛子。
-        + 有文化和有什么文化不是一个概念。
-        + 不该作为的不作为就是作为，能活个明白就不错了。
-        + 好声本身的魅力已经足够了，不在需要无谓的修饰和点缀。
-        + 如果我的能力只能让我穷困潦倒，那穷困潦倒就是我的价值。
-        + 每个人的立场、观念、心态和思维模式不一样，获取的信息量和解读信息的方式也不一样。
-        + 好听就是艺术，只是每个人的好听标准不一样。
-        + 能做到 *实事求是* 的就是神话。能说老实话，能办老实事的人就是神。
-        + 神就是道，道就是规律, 规律如来，容不得你思议，按规律办事的人就是什么。
-        + 人从根本上只面对两个问题： *一是生存，得活下来；二是得回答生命价值的问题，让心有个安住* 。
-        + 5年之后我不嫌你老，你就可以不老了吗？５年以后我变成了一个色狼，值得你回头看一眼吗?
-        + 不以求职应聘为生。要学位意义不大，应该什么有用学什么。
-        + 不管是文化艺术还是生存艺术，有道无术，术尚可求也。有术无道，止于术。
-        + *立志要高，挖掘要深。*
-        + 外国不是我们家的厨房，不是我想进就进。有钱的男人也不是菜市场里的鸡蛋，不是我想抓一个就抓一个。
-        + 马太效应： *你有，给你更多；你没有，把你原来的都拿走*
-        + 当人一旦从危险里跳出来，他就不再去关注这个事物的危险了，他的目光就会全部落在这个事物的利益人上，这就是人。
-*** 21. 中的精神 
-        + 棋无止境，艺无止境，学无止境，各行各业追求的精神都是相通的，达到这样一个境界的人， *专注修为* ，一定会有所成就。
-        + 对于自传或回忆录的作者来说，首先必须面对的，是诗与真的旋蒸，自我与世界的互动，还有遗忘与创造之间的平衡。
-        + 反复争棋的最后目的，是从中领悟建立圆满调和的道。
-        + 人的思想有三种变形，由忍辱负重的骆驼，到英勇搏击的雄狮，再到天真游戏的儿童。
-        + 小时候的教育如同一颗智慧的种子，深埋在吴老师心灵的土壤里，经过这么多年的灌溉培育，那一粒种子已悄然地长成一棵枝叶茂盛的大树。
-        + 中和了棋盘上各个子的作用的那一点，就是 *正着* 。 
-        + 无论输赢，只要下出了最善的一手，那就是成功的一局。
-        + *《三字经》* 写的是人间的根本。《大学》讲的是政治的根本。
-        + 围棋不会出现两局完全相同的形状，所以每盘棋都应该重视，认真下。
-        + 任何事物都是 *自然* 的。
-        + 每逢遇到问题，他会从很多方面去研究，直至自己能够理解，弄清楚其中的道理为止。
-        + 比起木谷先生培养了众多的后辈棋手来，我更想把围棋推向世界。(从这个里面可以看出，为什么日本最后 *六超* 之后，再也没有达到过世界前沿。)
-        + *21世纪的围棋* , 简而言之就是“ *从棋盘的整体去考虑* ”。围棋一般分序盘、中盘、官子几个阶段来进行思考的，但我想，应该是从整体上去思考。(按整体去思考，我余下的人生应该怎样度过？)
-        + *所谓最佳一手，指的是棋子下在某个位置上，之后棋力相等的棋手无论怎样去继续，那手棋始终处于有利于全局的位置。２１世纪的围棋也要继续变化下去* 。 
-        + *一阳來夏，复旦天心* 。
-        + 像季节轮回那样，世界也是盛衰轮回，一旦衰之极也会复苏过来，这是自然的形态。
-        + 围棋的目标不是局限于边角，而是应该很好地保持 *全体的平衡* ，站在一个很高的角度去看待。（所以，学习python, lisp, emacs, vim, php源码, 读书，下棋，游泳，爬山，旅游并不是浪费时间。而是站在一个相对平衡的角度思考人生，实践求证 ）
-        + *棋盘即是宇宙* 。
-        + 阴阳思想的最高境界是阴和阳的中和，所以围棋的目标也应该是中和。只有发挥出棋盘上所有棋子的效率那一手才是最佳的一手，那就是中和的意思。每一手必须是考虑全盘整体的平衡去下。－－这就是 *六合围棋*
-        + 所有有形的东西都是变化的。
-        + 创造围棋进步的是安定的精神动力。
-        + *中* 是取得阴阳平衡的一点，是最佳的意思。
-        + 过多以物质为中心，是会失去内省的。人的内心的 *平衡* 是不可或缺的。
-
+*** DONE [#A] 18.《python绝技》(运用python成为顶级黑客)
+*** IN_PROGRESS [#B] 19.《玄玄棋经》
+*** 20. [[./Distant-Savior.org][《遥远的救世主》]] 
+*** 21. [[./Spiritual-of-Center.org][《中的精神》]] 
 ** 2017 Year Books
 *** IN_PROGRESS [#B] 22. 官子大全 
 *** IN_PROGRESS [#A] 23. [[./The-Crownd.org][《乌合之众》]] (推荐)
