* 群体的一般特征

--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -23,3 +23,14 @@
     + 实际上，在群众眼里，也许最不公平的才是最好的。
     + *群体的禀性* ，构成了历史的真正主脉。
     + 破译人们的 *行为动机* ，就像确定某种矿物或者植物的属性一样有趣。
+*** 群体的一般特征
+    + 在某些既定的条件下，并且只有在这些条件下，一群人会表现出一些新的特点，它非常不同于组成这一群体的个人所具有的特点。聚集成群的人，他们的感情和思想全都采取同一个方向，他们自觉的个性消失了，形成了一种集体心理。
+    + 只有环境的单一性，才能造成明显的性格单一性。
+    + 一切精神结构都包含着各种性格的可能性，环境的突变就会使这种可能性表现出来。
+    + 组成一个群体的个人十分不同于孤立的个人。
+    + 我们的大多数日常行为，都是我们无法观察的一些隐蔽动机的结果。
+    + 无意识构成了种族的先天禀性。
+    + 在集体心理中，个人的才智被削弱了，从而他们的个性也被削弱了。异质性被同质性所吞没，无意识的品质占了上风。
+    + 群体一般只有很普通的品质。
+    + 决定群体特有的特点的原因：
+      - 即使仅从数量上来考虑，形成群体的个人也会感觉到一种势不可挡的力量，这使他敢于发泄出自本能的欲望，而在独自一人时，他是必须对这些欲望加以限制的。他很难约束自己不产生这样的念头： *群体是个无名氏，因此也不必承担责任* 。
