* 扰动的生态圈

--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -25,14 +25,21 @@
      + 对于任何一个复杂、危险的项目来说，最理想的团队人数是８个人。超过８个人，会造成决策缓慢和耽搁；而少于８个人，突发事件或者疏忽大意就会变成严重的阻碍。
      + 细节是至关重要的东西。
      + 生命的任何领域都是由数不清的独立的回路编织而成的。
-***  合成生态系统
-     + 一旦你改变了生态系统，　并找到适合播种的的种子，以及必不可少的气候窗口，改变就开始了，而且这是不可逆转的。这个合成的生态系统持续运转下去并不需要人的存在，它不受干扰仍会保持下去。
-     + 创造生物圈：
-       - 微生物做绝大部分的工作
-       - 土壤是有机体, 它是活的。它会呼吸。
-       - 创造【冗余】的食物网络
-       - 逐步地增加多样性
-       - 如果不能提供一种物理功能，就需要模拟一个类似的功能
-       - 大气会传达整个系统的状态
-       - 聆听系统，看看它要去哪里
-     + 所有的封闭系统都是会被打开的，至少会出现泄露。(也就是: 不存在绝对封闭系统)
+*** 合成生态系统
+    + 一旦你改变了生态系统，　并找到适合播种的的种子，以及必不可少的气候窗口，改变就开始了，而且这是不可逆转的。这个合成的生态系统持续运转下去并不需要人的存在，它不受干扰仍会保持下去。
+    + 创造生物圈：
+      - 微生物做绝大部分的工作
+      - 土壤是有机体, 它是活的。它会呼吸。
+      - 创造【冗余】的食物网络
+      - 逐步地增加多样性
+      - 如果不能提供一种物理功能，就需要模拟一个类似的功能
+      - 大气会传达整个系统的状态
+      - 聆听系统，看看它要去哪里
+    + 所有的封闭系统都是会被打开的，至少会出现泄露。(也就是: 不存在绝对封闭系统)
+*** 冒出的生态圈
+    + 人体本身就是一个巨大的复杂系统。我们从自然中获得的施与是令人难以置信的。
+    + 扰动是生态的必要催化剂。
+    + 我们究竟可以切断多少的联系，还能保持一个物种的生存。
+    + 命运始终具有讽刺意味。
+    + 顺其自然就好。
+    + 大气是极其重要的环境因素，大气产生生命，生命也可以产生大气。
