--- a/docs/What-did-Philosophers-do.org
+++ b/docs/What-did-Philosophers-do.org
@@ -24,6 +24,6 @@
     + 在他们烧书的地方，他们最终会烧人。
     + 工商业和农业的一个区别是，人民不需要看天吃饭。
     + "法不责众" 。
-    + 一言兴邦
+    + *一言兴邦*
     + 革命者惯有的缺点－－不容异己。
     + 哲学和宗教的联合是行不通的。宗教只会把哲学当做获权的工具，一旦取得胜利，就会毫不犹豫地把哲学扔到一边。
